--- a/index.html
+++ b/index.html
@@ -3,80 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="wnameth=device-wnameth, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Healthivate</title>
-    <style>
-        .title {
-            text-align: center;
-            display: block;
-        }
-
-        .container {
-            box-sizing: content-box;
-            width: 700px;
-            height: auto;
-            border-color: black;
-            border-style: solid;
-            border-radius: 5px;
-            /* display: flex; */
-            text-align: center;
-            /* align-content: center; */
-            justify-content: center;
-            margin: 0 auto 25px;
-        }
-
-        /* .container button {
-            margin: 20px;
-        } */
-
-        #container-2 p {
-            margin: 0;
-            padding: 0;
-            text-align: center;
-        }
-
-        #container-2 li {
-            font-size: 18px;
-            /* color: red; */
-            text-align: left; 
-            margin-left: 10px;
-        }
-
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1 class="title">Healthivate Health Tracker</h1>
 
-    <div class="container">
-        <h3>BMI Tracker</h3>
+    <div class="container" id="container-1">
+        <h3 style="margin-top: 25px;">BMI Tracker</h3> 
+        <div style="display: inline-block;  width: 49%; text-align: left;">
+            <label for="height"> <b>Height (cm):</b> </label> 
+            <input type="number" id="height" placeholder="Enter Height in cm" style="width: 100%;">
+        </div>
+        <div style="display: inline-block; width: 49%; text-align: left;">
+            <label for="weight"> <b>Weight (kg):</b> </label>
+            <input type="number" id="weight" placeholder="Enter Weight in kg"  style="width: 100%;">            
+        </div>
 
-        <!-- <label for="gender">Gender: </label> <br>
-        <input type="radio" name="gender" value="male"> Male
-        <input type="radio" name="gender" value="female"> Female
-        <br><br> -->
-
-        <label for="height">Height (Cm): </label> <br>
-        <input type="number" id="height" value="180" placeholder="Enter Height in Cm">
-        <br><br>
-
-        <label for="weight">Weight (Kg): </label> <br>
-        <input type="number" id="weight" value="80" placeholder="Enter Weight in Kg">
-        <br><br>
-
-        <!-- <label for="age">Age: </label> <br>
-        <input type="number" id="age" placeholder="Enter Age">
-        <br><br> -->
-
-        <button class="btn" id="btn" style="margin-bottom: 25px; margin-top: 20px;">Calculate BMI</button> <br>
+        <div style="text-align: left;">
+            <button class="btn btn-primary" id="btn" style="margin-bottom: 25px; margin-top: 20px;">Calculate BMI</button>
+        </div>
     </div>
 
     <div class="container" id="container-2" style="display: none;">
-        <h3>Workout Recommendation</h3>
+        <h3 style="margin-top: 25px;">Workout Recommendation</h3>
         <div id="result"> </div>
         <ul id="workout-list"></ul>
     </div>
 
+    <div class="container" id="container-3">
+        <h3 style="margin-top: 25px;">Workout Planner</h3>
+
+    </div>
+
     <script src="function.js"></script>
 
-
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
 </body>
 </html>
