--- a/index.html
+++ b/index.html
@@ -1,28 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="wnameth=device-wnameth, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+        rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <title>Healthivate</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <h1 class="title">Healthivate Health Tracker</h1>
 
     <div class="container" id="container-1">
-        <h3 style="margin-top: 25px;">BMI Tracker</h3> 
+        <h3 style="margin-top: 25px;">BMI Tracker</h3>
         <div style="display: inline-block;  width: 49.65%; text-align: left;">
-            <label for="height"> <b>Height (cm):</b> </label> 
+            <label for="height"> <b>Height (cm):</b> </label>
             <input type="number" id="height" placeholder="Enter Height in cm" style="width: 100%;">
         </div>
         <div style="display: inline-block; width: 49.65%; text-align: left;">
             <label for="weight"> <b>Weight (kg):</b> </label>
-            <input type="number" id="weight" placeholder="Enter Weight in kg" style="width: 100%;">            
+            <input type="number" id="weight" placeholder="Enter Weight in kg" style="width: 100%;">
         </div>
 
         <div style="text-align: left;">
-            <button class="btn btn-primary" id="btn" style="margin-bottom: 25px; margin-top: 20px;">Calculate BMI</button>
+            <button class="btn btn-primary" id="btn" style="margin-bottom: 25px; margin-top: 20px;">Calculate
+                BMI</button>
         </div>
     </div>
 
@@ -39,7 +47,12 @@
 
     <script src="function.js"></script>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js" integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+        integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
