--- a/index.html
+++ b/index.html
@@ -1,176 +1,121 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="wnameth=device-wnameth, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB"
-      crossorigin="anonymous"
-    />
-    <title>Healthivate</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
 
-  <body>
-    <h1 class="title">Healthivate Health Tracker</h1>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="wnameth=device-wnameth, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap"
+    rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous" />
+  <title>Healthivate</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
 
-    <!-- ===== Container BMI Tracker ===== -->
-    <div class="container" id="container-1">
-      <h3 style="margin-top: 25px">BMI Tracker</h3>
-      <div style="display: inline-block; width: 49.65%; text-align: left">
-        <label class="form-label" for="height"> <b>Height (cm):</b> </label>
-        <input
-          class="form-control form-control-sm"
-          type="number"
-          id="height"
-          placeholder="Enter Height in cm"
-          style="width: 100%"
-        />
+<body>
+  <h1 class="title">Healthivate Health Tracker</h1>
+
+  <!-- ===== Container BMI Tracker ===== -->
+  <div class="container" id="container-1">
+    <h3 style="margin-top: 25px">BMI Tracker</h3>
+    <div style="display: inline-block; width: 49.65%; text-align: left">
+      <label class="form-label" for="height"> <b>Height (cm):</b> </label>
+      <input class="form-control form-control-sm" type="number" id="height" placeholder="Enter Height in cm"
+        style="width: 100%" />
+    </div>
+    <div style="display: inline-block; width: 49.65%; text-align: left">
+      <label class="form-label" for="weight"> <b>Weight (kg):</b> </label>
+      <input class="form-control form-control-sm" type="number" id="weight" placeholder="Enter Weight in kg"
+        style="width: 100%" />
+    </div>
+
+    <div style="text-align: left">
+      <button class="btn btn-primary" id="btn" style="margin-bottom: 25px; margin-top: 20px; width: 100%">
+        Calculate BMI
+      </button>
+    </div>
+  </div>
+
+  <!-- ===== Container Workout Recommendation ===== -->
+  <div class="container" id="container-2" style="display: none">
+    <h3 style="margin-top: 25px">Workout Recommendation</h3>
+    <h4>Your BMI is</h4>
+    <div id="result"></div>
+
+    <ul id="workout-list" class="mt-3"></ul>
+  </div>
+
+  <!-- ===== Container Workout Planner ===== -->
+  <div class="container" id="container-3">
+    <h3 style="margin-top: 25px">Workout Planner</h3>
+    <form id="planner-form">
+      <div class="box-margin" style="display: block; text-align: left">
+        <label for="workoutname" class="form-label">
+          <b>Workout Name:</b>
+        </label>
+        <input type="text" class="form-control form-control-sm" id="workout-name" name="workout-name"
+          placeholder="Push Up" style="width: 100%" />
       </div>
-      <div style="display: inline-block; width: 49.65%; text-align: left">
-        <label class="form-label" for="weight"> <b>Weight (kg):</b> </label>
-        <input
-          class="form-control form-control-sm"
-          type="number"
-          id="weight"
-          placeholder="Enter Weight in kg"
-          style="width: 100%"
-        />
+
+      <div class="box-margin" style="display: block; text-align: left; margin-bottom: 10px">
+        <label for="category" class="form-label"> <b>Category:</b> </label>
+        <select name="category" class="form-control form-control-sm" id="workout-category"
+          style="display: block; width: 100%">
+          <b>Category: </b>
+          <option value="">-- Pilih --</option>
+          <option value="Cardio">Cardio</option>
+          <option value="Strength">Strength</option>
+          <option value="Flexibility">Flexibility</option>
+          <option value="HIIT">HIIT</option>
+        </select>
+      </div>
+
+      <div class="box-margin" style="display: inline-block; width: 49.65%; text-align: left">
+        <label for="duration" class="form-label">
+          <b>Duration (mins):</b>
+        </label>
+        <input type="number" class="form-control form-control-sm" id="workout-duration" placeholder="30"
+          style="width: 100%" />
+      </div>
+
+      <div class="box-margin" style="display: inline-block; width: 49.65%; text-align: left">
+        <label for="workoutdate" class="form-label"> <b>Date:</b> </label>
+        <input type="date" class="form-control form-control-sm" id="workout-date" style="width: 100%" />
+      </div>
+
+      <div class="box-margin" style="display: block; text-align: left">
+        <label for="workoutnotes" class="form-label"> <b>Notes: </b> </label>
+        <input type="text" class="form-control form-control-xl" id="workout-notes" placeholder="Optional..."
+          style="width: 100%" />
       </div>
 
       <div style="text-align: left">
-        <button
-          class="btn btn-primary"
-          id="btn"
-          style="margin-bottom: 25px; margin-top: 20px; width: 100%"
-        >
-          Calculate BMI
+        <button type="submit" class="btn btn-primary" id="btn-2"
+          style="margin-bottom: 25px; margin-top: 20px; width: 100%">
+          Add Workout
         </button>
       </div>
-    </div>
+    </form>
+  </div>
 
-    <!-- ===== Container Workout Recommendation ===== -->
-    <div class="container" id="container-2" style="display: none">
-      <h3 style="margin-top: 25px">Workout Recommendation</h3>
-      <div id="result"></div>
-      <ul id="workout-list"></ul>
-    </div>
-
-    <!-- ===== Container Workout Planner ===== -->
-    <div class="container" id="container-3">
-      <h3 style="margin-top: 25px">Workout Planner</h3>
-      <form id="planner-form">
-        <div class="box-margin" style="display: block; text-align: left">
-          <label for="workoutname" class="form-label">
-            <b>Workout Name:</b>
-          </label>
-          <input
-            type="text"
-            class="form-control form-control-sm"
-            id="workout-name"
-            name="workout-name"
-            placeholder="Push Up"
-            style="width: 100%"
-          />
-        </div>
-
-        <div
-          class="box-margin"
-          style="display: block; text-align: left; margin-bottom: 10px"
-        >
-          <label for="category" class="form-label"> <b>Category:</b> </label>
-          <select
-            name="category"
-            class="form-control form-control-sm"
-            id="workout-category"
-            style="display: block; width: 100%"
-          >
-            <b>Category: </b>
-            <option value="">-- Pilih --</option>
-            <option value="Cardio">Cardio</option>
-            <option value="Strength">Strength</option>
-            <option value="Flexibility">Flexibility</option>
-            <option value="HIIT">HIIT</option>
-          </select>
-        </div>
-
-        <div
-          class="box-margin"
-          style="display: inline-block; width: 49.65%; text-align: left"
-        >
-          <label for="duration" class="form-label">
-            <b>Duration (mins):</b>
-          </label>
-          <input
-            type="number"
-            class="form-control form-control-sm"
-            id="workout-duration"
-            placeholder="30"
-            style="width: 100%"
-          />
-        </div>
-
-        <div
-          class="box-margin"
-          style="display: inline-block; width: 49.65%; text-align: left"
-        >
-          <label for="workoutdate" class="form-label"> <b>Date:</b> </label>
-          <input
-            type="date"
-            class="form-control form-control-sm"
-            id="workout-date"
-            style="width: 100%"
-          />
-        </div>
-
-        <div class="box-margin" style="display: block; text-align: left">
-          <label for="workoutnotes" class="form-label"> <b>Notes: </b> </label>
-          <input
-            type="text"
-            class="form-control form-control-xl"
-            id="workout-notes"
-            placeholder="Optional..."
-            style="width: 100%"
-          />
-        </div>
-
-        <div style="text-align: left">
-          <button
-            type="submit"
-            class="btn btn-primary"
-            id="btn-2"
-            style="margin-bottom: 25px; margin-top: 20px; width: 100%"
-          >
-            Add Workout
-          </button>
-        </div>
-      </form>
-    </div>
-
-    <div class="container" id="container-4">
-      <h3 style="margin-top: 25px">Workout Schedule</h3>
-      <table id="workout-table" class="table">
-        <thead>
-          <tr>
-            <th>No</th>
-            <th>Tanggal</th>
-            <th>Latihan</th>
-            <th>Kategori</th>
-            <th>Durasi</th>
-            <th>Catatan</th>
-            <th>Aksi</th>
-          </tr>
-        </thead>
-        <tbody id="workout-body" class="table"></tbody>
-        <!-- <tbody>
+  <div class="container" id="container-4">
+    <h3 style="margin-top: 25px">Workout Schedule</h3>
+    <table id="workout-table" class="table">
+      <thead>
+        <tr>
+          <th>No</th>
+          <th>Tanggal</th>
+          <th>Latihan</th>
+          <th>Kategori</th>
+          <th>Durasi</th>
+          <th>Catatan</th>
+          <th>Aksi</th>
+        </tr>
+      </thead>
+      <tbody id="workout-body" class="table"></tbody>
+      <!-- <tbody>
           <tr>
             <td>1.</td>
             <td>24-12-2001</td>
@@ -186,25 +131,22 @@
             </td>
           </tr>
         </tbody> -->
-      </table>
-    </div>
+    </table>
+  </div>
 
-    <div class="container" id="container-4">
-      <h3>Rekomendasi Suplemen</h3>
-    </div>
+  <div class="container" id="container-4">
+    <h3>Rekomendasi Suplemen</h3>
+  </div>
 
-    <script src="./function.js"></script>
-    <script src="./containerBMI.js"></script>
+  <script src="./function.js"></script>
+  <script src="./containerBMI.js"></script>
 
-    <script
-      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
-      integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
-      crossorigin="anonymous"
-    ></script>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+    integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.min.js"
+    integrity="sha384-G/EV+4j2dNv+tEPo3++6LCgdCROaejBqfUeNjuKAiuXbjrxilcCdDz6ZAVfHWe1Y"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
