--- a/index.html
+++ b/index.html
@@ -137,53 +137,46 @@
         <p class="price" style="margin-left: 10px;">Rp 350.000</p>
 
         <div class="qty">
-          <button><span>-</span></button>
-          <div><span>1</span></div>
-          <button><span>+</span></button>
+          <button onclick="qtyMin()" id="btn-minus">-</button>
+          <div><span id="buy-qty">1</span></div>
+          <button onclick="qtyAdd()" id="btn-plus">+</button>
         </div>
 
-        <button class="btnBuy">Buy</button>
+        <button onclick="createCheckoutData()" class="btnBuy" id="btn-buy">Buy</button>
       </div>
     </div>
   </div>
 
   <!-- Keranjang Produk -->
   <div class="container" id="container-4">
-    <h2>Keranjang</h2>
-    <table>
-      <div>
+    <h3>Keranjang</h2>
+    <div class="table-responsive">
+    <table class="table table-striped table-hover align-middle">
+      <thead class="table-primary text-white text-center">
         <tr>
+          <th>ID</th>
           <th>Produk</th>
-          <th>Harga</th>
           <th>Qty</th>
           <th>Subtotal</th>
           <th>Aksi</th>
         </tr>
-      </div>
-      <tbody>
-        <tr>
-          <td>Whey Protein Isolate</td>
-          <td>Rp 350.000</td>
-          <td>1</td>
-          <td>Rp 350.000</td>
-          <td><button class="btn-hapus">Hapus</button></td>
-        </tr>
-      </tbody>
-      <div>
-        <tr class="total-row">
-          <td colspan="3"><strong>Total</strong></td>
-          <td colspan="2"><strong>Rp 350.000</strong></td>
-        </tr>
-        <div>
+      </thead>
+      <tbody id="checkout-body"></tbody>
     </table>
-    <button class="btn-checkout">Checkout</button>
+    <button onclick="checkoutAllData()" class="btn-checkout">Checkout</button>
+    </div>
+    <div id="checkout-result">
+    </div>
   </div>
   </div>
   </div>
 
+  <!-- Segmen Script JS -->
   <!-- <script src="./function.js"></script> -->
-  <script src="./crudPlannerForm.js"></script>
+  <script src="./crudSupplementCheckout.js"></script>
   <script src="./containerBMI.js"></script>
+  <script src="./crudPlannerForm.js"></script>
+
 
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
     integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -200,3 +193,10 @@
 </body>
 
 </html>
+
+      <!-- <div>
+        <tr class="total-row">
+          <td colspan="3"><strong>Total</strong></td>
+          <td colspan="2"><strong>Rp 350.000</strong></td>
+        </tr>
+      <div> -->
